# ggwp

./: achievements.html  bot.py  config.py  db.py  handlers.py  index.html  main.py  models.py  payment.html  pyproject.toml  replit_zip_error_log.txt  settings.html
js/: app.js  scripts-payments.js  scripts-settings.js
style/: achievements.css  payments.css  settings.css
