[project]
name = "repl-nix-telegramwebstats"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.7",
    "aiohttp-cors>=0.7.0",
    "pytelegrambotapi>=4.24.0",
    "python-telegram-bot",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]
